--- a/maietta.tex
+++ b/maietta.tex
@@ -1,24 +1,14 @@
 % !TEX encoding = IsoLatin
 
-% La riga soprastante serve per configurare gli editor TeXShop, TeXWorks
-% e TeXstudio per gestire questo file con la codifica IsoLatin o Latin 1
-% o ISO 8859-1.
+% Prima riga per gli editor TeXShop, TeXWorks e TeXstudio per configurare codifica  ISO 8859-1
+% La codifica di questo file deve essere ISO 8859-1 se si sceglie \usepackage[latin1]{inputenc}
 
-
-% Affinché gli accenti vengano accettati, assicurati che la codifica di questo file
-% sia ISO 8859-1
-
-
-
-% per commentare una riga mettere % al suo inizio
-% per s-commentare una riga (ossia attivarla) togliere il % al suo inizio
-%
-\documentclass[% formato PDF/A, obbligatorio per l'archiviazione delle tesi di Polito
-,cucitura%lascia margine per la rilegatura
-%,twoside% per stampa fronte-retro (fortemente consigliato per tesi voluminose, opzionale per le altre)
-%,12pt% font più grande (12pt) rispetto a quello normalmente usato (11pt)
+\documentclass[
+,cucitura
+%,twoside
+%,12pt
 ]{toptesi}
-%
+
 %\usepackage[a-1b]{pdfx}
 \usepackage{hyperref}
 \hypersetup{%
@@ -30,37 +20,18 @@
     citecolor={red},
     urlcolor={blue}
   }
-% \documentclass[11pt,twoside,oldstyle,autoretitolo,classica,greek]{toptesi}
-% \usepackage[or]{teubner}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-% Esempio di composizione di tesi di laurea.
-%
-% Questo esempio e' stato preparato inizialmente 13-marzo-1989
-% e poi e' stato modificato via via che TOPtesi andava
-% arricchendosi di altre possibilita'.
-%
-% Nel seguito laurea "quinquennale" sta anche per "specialistica" o "magistrale"
+% \documentclass[11pt,twoside,oldstyle,autoretitolo,classica,greek]{toptesi}   % \usepackage[or]{teubner}
+% Nel seguito laurea "quinquennale" sta anche per "specialistica" o "magistrale
 
-% Cambiare encoding a piacere; oppure non caricare nessun encoding se si usano
-% solo caratteri a 7 bit (ASCII) nei file d'entrata.
-%
-\usepackage[latin1]{inputenc}% IMPORTANTE! usare codifica ISO-8859-1 per le lettere accentate
+\usepackage[latin1]{inputenc}
 \usepackage{titlesec}
 \usepackage{lipsum}
-
-
-
-
-
 \input{commands.tex}
 \usepackage{dirtytalk}
 \usepackage{amsmath}
 \usepackage{fancyvrb}
 \usepackage{graphicx}
-%\usepackage{wrapfig}
 \usepackage{listings}
-
 \usepackage{xcolor}
 
 %New colors defined below
@@ -92,54 +63,6 @@
 \makeglossaries
 \newacronym{ml}{ML}{Machine Learning}
 \newacronym{NER}{NER}{Named Entity Recognition}
-
-
-\begin{document}
-
-\ateneo{Politecnico di Torino}
-
-%%% scegliere la propria facoltà (solo PRIMA dell'AA 2012-2013)
-%
-%\facolta[III]{Ingegneria dell'Informazione}
-%\facolta[IV]{Organizzazione d'Impresa\\e Ingegneria Gestionale}
-%\Materia{Remote sensing}% uso sconsigliato
-
-%\monografia{Gestione informatizzata di un magazzino ricambi}% per la laurea triennale
-\titolo{Estrazione di dati della P.A. (v. 1.02)}% per la laurea quinquennale e il dottorato
-%\sottotitolo{Metodo dei satelliti medicei}% NON obbligatorio, per la laurea quinquennale e il dottorato
-
-%%% scegliere il proprio corso
-%
-%\corsodilaurea{Ingegneria dell'Organizzazione d'Impresa}% per la laurea di primo e secondo livello
-%\corsodilaurea{Ingegneria Logistica e della Produzione}% per la laurea di primo e secondo livello
-%\corsodilaurea{Ingegneria Gestionale}% per la laurea di primo e secondo livello
-\corsodilaurea{Ingegneria Informatica}% per la laurea di primo e secondo livello
-%\corsodidottorato{Meccanica}% per il dottorato
-
-\candidato{Davide \textsc{Maietta}}% per tutti i percorsi
-%\secondocandidato{Evangelista \textsc{Torricelli}}% per la laurea magistrale solamente
-%\direttore{prof. Albert Einstein}% per il dottorato
-%\coordinatore{prof. Albert Einstein}% per il dottorato
-\relatore{prof.\ Maurizio Morisio}% per la laurea e il dottorato
-%\secondorelatore{dipl.~ing.~Werner von Braun}% per la laurea magistrale
-%\terzorelatore{{\tabular{@{}l}dott.\ Neil Armstrong\\prof. Maria Rossi\endtabular}}% per la laurea magistrale
-%\tutore{ing.~Karl Von Braun}% per il dottorato
-%\tutoreaziendale{dott.\ ing.\ Giovanni Giacosa} % solo per la laurea di secondo livello con tesi svolta in azienda
-%\NomeTutoreAziendale{Supervisore aziendale\\Centro Ricerche FIAT}
-%\sedutadilaurea{Agosto 1615}% per la laurea quinquennale
-%\esamedidottorato{Novembre 1610}% per il dottorato
-\sedutadilaurea{\textsc{Novembre} 2017}% per la laurea triennale
-%\sedutadilaurea{\textsc{Anno~accademico} 1615-1616}% per la laurea magistrale
-%\annoaccademico{1615-1616}% solo con l'opzione classica
-%\annoaccademico{2006-2007}% idem
-%\ciclodidottorato{XV}% per il dottorato
-\logosede{logopolito}
-%
-%\chapterbib %solo per vedere che cosa succede; e' preferibile comporre una sola bibliografia
-%\AdvisorName{Supervisors}
-%\newtheorem{osservazione}{Osservazione}% Standard LaTeX
-
-
 %\usepackage[a-1b]{pdfx}
 %\hypersetup{%
 %    pdfpagemode={UseOutlines},
@@ -158,52 +81,89 @@
 
 %\setbindingcorrection{3mm}
 
-\errorcontextlines=9
 
+%******FUNZIONALITÀ STANDARD DI TOPTESI UTILIZZABILI DOPO BEGIN DOCUMENT*********************************************
+
+%%% scegliere la propria facoltà (solo PRIMA dell'AA 2012-2013) \facolta[III]{Ingegneria dell'Informazione} \facolta[IV]{Organizzazione d'Impresa\\e Ingegneria Gestionale}
+
+%\monografia{Estrazione di dati della P.A.}% per la laurea triennale
+%\titolo{Estrazione di dati della P.A.}% per la laurea quinquennale e il dottorato
+%%\sottotitolo{Metodo dei satelliti medicei}
+
+%%% scegliere il proprio corso
+%
+%\corsodilaurea{Ingegneria dell'Organizzazione d'Impresa}% per la laurea di primo e secondo livello
+%\corsodilaurea{Ingegneria Logistica e della Produzione}% per la laurea di primo e secondo livello
+%\corsodilaurea{Ingegneria Gestionale}% per la laurea di primo e secondo livello
+%\corsodilaurea{Ingegneria Informatica}% per la laurea di primo e secondo livello
+%\corsodidottorato{Meccanica}% per il dottorato
+
+%\candidato{Davide \textsc{Maietta}}% per tutti i percorsi
+%\secondocandidato{Evangelista \textsc{Torricelli}}% per la laurea magistrale solamente
+%\direttore{prof. Albert Einstein}% per il dottorato
+%\coordinatore{prof. Albert Einstein}% per il dottorato
+%\relatore{prof.\ Maurizio Morisio}% per la laurea e il dottorato
+%\secondorelatore{dipl.~ing.~Werner von Braun}% per la laurea magistrale
+%\terzorelatore{{\tabular{@{}l}dott.\ Neil Armstrong\\prof. Maria Rossi\endtabular}}% per la laurea magistrale
+%\tutore{ing.~Karl Von Braun}% per il dottorato
+%\tutoreaziendale{dott.\ ing.\ Giovanni Giacosa} % solo per la laurea di secondo livello con tesi svolta in azienda
+%\NomeTutoreAziendale{Supervisore aziendale\\Centro Ricerche FIAT}
+%\sedutadilaurea{Agosto 1615}% per la laurea quinquennale
+%\esamedidottorato{Novembre 1610}% per il dottorato
+%\sedutadilaurea{\textsc{Novembre} 2017}% per la laurea triennale
+%\sedutadilaurea{\textsc{Anno~accademico} 1615-1616}% per la laurea magistrale
+%\annoaccademico{1615-1616}% solo con l'opzione classica
+%\annoaccademico{2006-2007}% idem
+%\ciclodidottorato{XV}% per il dottorato
+%\logosede{logopolito}
+%
+%\AdvisorName{Supervisors}
+%\newtheorem{osservazione}{Osservazione}% Standard LaTeX
+%\errorcontextlines=9
+%\frontespizio
+%\paginavuota
+%\newpage
+%\advance\voffset -5mm
+%\advance\textheight 30mm
+%\begin{dedica}
+%\end{dedica}
+%\dagger
+%\sommario
+%Inserire qui un breve sommario della tesi.
+%\ringraziamenti
+%Opzionali, solo nel caso si sia ricevuto un aiuto speciale e particolarmente rilevante.
+%% inserire sempre nella tesi per la laurea di I livello, perché il nome dei tutori non è indicato sul frontespizio.
+%Il lavoro descritto in questa monografia è stato svolto sotto la supervisione
+%del Prof. (tutore accademico)% inserire sempre il nome del tutore accademico
+% e dell'Ing. (tutore aziendale)% inserire solo se la monografia è relativa ad un tirocinio.
+
+%\tablespagetrue 
+%\figurespagetrue 
+
+\begin{document}
+\ateneo{Politecnico di Torino}
+\titolo{Estrazione di dati della P.A.}% per la laurea quinquennale e il dottorato
+\corsodilaurea{Ingegneria Informatica}% per la laurea di primo e secondo livello
+\candidato{Davide \textsc{Maietta}}% per tutti i percorsi
+\relatore{prof.\ Maurizio Morisio}% per la laurea e il dottorato
+\sedutadilaurea{\textsc{Novembre} 2017}% per la laurea triennale
+\logosede{logopolito}
+\errorcontextlines=9
 \frontespizio
 \paginavuota
 \newpage
-%per sfruttare meglio lo spazio nella pagina
 \advance\voffset -5mm
 \advance\textheight 30mm
-
-% opzionale, solo se si vuole dedicare la tesi a delle persone care
-\begin{dedica}
-A mio padre
-
-\textdagger\ A mio nonno Pino
-\end{dedica}
-
+%\begin{dedica}
+%\end{dedica}
 \sommario
-
-Inserire qui un breve sommario della tesi.
-
-\ringraziamenti
-
-Opzionali, solo nel caso si sia ricevuto un aiuto speciale e particolarmente rilevante.
-
-%% inserire sempre nella tesi per la laurea di I livello, perché il nome dei tutori non è indicato sul frontespizio.
-%Il lavoro descritto in questa monografia è stato svolto sotto la supervisione
-%del Prof. Antonio Lioy (tutore accademico)% inserire sempre il nome del tutore accademico
-% e dell'Ing. Mario Rossi (tutore aziendale)% inserire solo se la monografia è relativa ad un tirocinio.
-%.
-
-%\tablespagetrue % normalmente questa riga non serve ed e' commentata
-%\figurespagetrue % normalmente questa riga non serve ed e' commentata
-
+IN BREVE
 \indici
-
 \mainmatter
 
-%\section{1}
-%\input{capitoli/1-introduzione.tex}
-
-
 %\titleformat{\chapter}[display]  {\normalfont\bfseries}{}{0pt}{\Large}
-
 \chapter[Estrazione di dati da testi della pubblica amministrazione][]{1. Estrazione di dati da testi della pubblica amministrazione}
 \input{capitoli/chapter1.tex}
-%\label{chap:1}
 
 \chapter[Casi d'uso delle attestazioni SOA][]{2. Casi d'uso delle attestazioni SOA}
 \input{capitoli/chapter2.tex}
@@ -213,34 +173,18 @@ Opzionali, solo nel caso si sia ricevuto un aiuto speciale e particolarmente ril
 
 \chapter[Realizzazione dei prototipi][]{4. Realizzazione dei prototipi}
 \input{capitoli/chapter4.tex}
-
-%\chapter[Machine Learning][]{5. Machine Learning}
 \input{capitoli/machinelearning.tex}
 
 \chapter[Valutazione dei risultati][]{5. Valutazione dei risultati}
 \input{capitoli/chapter5.tex}
 
-%\section{6}
-%\input{capitoli/6-implementazione.tex}
-
-%\section{7}
-%\input{capitoli/7-testing.tex}
-
-%\section{8}
-%\input{capitoli/8-conclusioni.tex}
-
-
-
-% bibliografia scritta "a mano"
-%\input{biblio.tex}
-
-% se la bibliografia è stata scritta (usando Bibtex) nel file biblio.bib allora commentare la riga precedente e scommentare le due righe seguenti
 \backmatter
 \printglossary[type=\acronymtype]
 
+% bibliografia scritta "a mano"
+%\input{biblio.tex}
+% se la bibliografia è stata scritta (usando Bibtex) nel file biblio.bib allora commentare la riga precedente e scommentare le due righe seguent
 \bibliographystyle{plain} 
 \bibliography{biblio.bib}
-
-
 
 \end{document}
